k8s/05-helm/c7t-k8s/templates/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend

  #
  # Whenever k8s decides to create one or more pod for this deployment, it will use the YAML here to form
  # the contents of the pods resource definition YAML.
  #
  template:
    metadata:
      labels:
        app: backend
    spec:
      #
      # Create a "volume" that can be used by the container when being created.
      # Will allow Kubernetes resources such as ConfigMaps and Secrets which contain files to be made
      # available as files on disk in the container. This is important because it is impracticle and insecure
      # to hardcode config values into your docker image at build time.
      #
      volumes:
        - name: config-volume
          configMap:
            name: backend

      containers:
        - name: backend
          image: pserwylo/cognizant-k8s-pres-backend:latest
          ports:
            - containerPort: 4000

          livenessProbe:
            httpGet:
              path: /api/health/status
              port: 4000
            initialDelaySeconds: 3
            periodSeconds: 3

          #
          # Use the volume created above, which contains a "config.json" file from within the "frontend-config-json"
          # ConfigMap, and make the "config.json" file available in the webroot (overwriting the example one in
          # the docker container).
          #
          volumeMounts:
            - mountPath: /app/config.json
              name: config-volume
              subPath: config.json
