k8s/05-helm/c7t-k8s/templates/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frontend
